--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,35 @@
+// ****************ANDREW
+
 * {
   font-family: Helvetica;
   margin:0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.news {
+  width: 85%;
+  margin: 0 auto;
+  .newsItems {
+    display: inline-block;
+    width: 20%;
+    text-align: center;
+    vertical-align: top;
+
+    .newsTitle {
+      display: inline-block;
+    }
+    .newsPhoto {
+      display: inline-block;
+      width: 80px;
+      margin-bottom:5px;
+    }
+  }
+}
+
+.newsPhoto {
+  width: 75px;
+  margin-right:40px;
 }
 
 .bandInput {
@@ -50,3 +77,4 @@
     margin-left: 20px;
   }
 }
+// ************ END ANDREW
