--- a/main.css
+++ b/main.css
@@ -4,6 +4,25 @@
   padding: 0;
   box-sizing: border-box; }
 
+.news {
+  width: 85%;
+  margin: 0 auto; }
+  .news .newsItems {
+    display: inline-block;
+    width: 20%;
+    text-align: center;
+    vertical-align: top; }
+    .news .newsItems .newsTitle {
+      display: inline-block; }
+    .news .newsItems .newsPhoto {
+      display: inline-block;
+      width: 80px;
+      margin-bottom: 5px; }
+
+.newsPhoto {
+  width: 75px;
+  margin-right: 40px; }
+
 .bandInput {
   text-align: center; }
   .bandInput input {
