--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,4 @@
-<<<<<<< HEAD
-//~=~=~=~=~=~=~=~=~ PATRICK ~=~=~=~=~=~=~=~=~=//
 
-
-
-//~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=//
-=======
 * {
   font-family: Helvetica;
   margin:0;
@@ -38,7 +32,7 @@
     display: inline-block;
     width: 22%;
     padding: 15px;
-    text-align: center;
+    // text-align: center;
   }
 }
 .eventItem {
@@ -57,4 +51,3 @@
     margin-left: 20px;
   }
 }
->>>>>>> f8fdb3a2f31a88f7081c2edaa4691bd2dfb3d0b0
