--- a/main.css
+++ b/main.css
@@ -1,18 +1,3 @@
-
-.weatherContainer {
-    border: 10px solid black;
-    width: 80%;
-    height: 100px;
-    background-color: black;
-    color: #94F3FF;
-    text-shadow: 1px 3px 3px #00BCD4;
-    border-radius: 25px;
-    font-family: monospace;
-}
-span{
-  font-size: 20px;
-}
-=======
 * {
   font-family: Helvetica;
   margin: 0;
@@ -41,8 +26,7 @@ span{
   .topRow div {
     display: inline-block;
     width: 22%;
-    padding: 15px;
-    text-align: center; }
+    padding: 15px; }
 
 .eventItem {
   width: 85%;
@@ -57,4 +41,3 @@ span{
     padding: 5px;
     border: 1px solid black;
     margin-left: 20px; }
->>>>>>> f8fdb3a2f31a88f7081c2edaa4691bd2dfb3d0b0
